// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text > renders correctly with dir 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
    >
      <div
        class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
        dir="rtl"
      >
        This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with htmlFor 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
    >
      <div
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
        for="test"
      >
        This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with placement 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
    >
      <div
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
        style="--textAlign__qabug40: end;"
      >
        This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
    >
      <div
        class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
      >
        This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="body" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
    >
      body
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
    >
      bodySmall
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
    >
      bodySmallStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStronger__m4c9owm style_undefined_compound_0__m4c9ow1a"
    >
      bodySmallStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a"
    >
      bodyStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStronger__m4c9owo style_undefined_compound_0__m4c9ow1a"
    >
      bodyStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="caption" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
    >
      caption
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionSmall__m4c9owq style_undefined_compound_0__m4c9ow1a"
    >
      captionSmall
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="captionSmallStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionSmallStrong__m4c9owr style_undefined_compound_0__m4c9ow1a"
    >
      captionSmallStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="captionSmallStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionSmallStronger__m4c9ows style_undefined_compound_0__m4c9ow1a"
    >
      captionSmallStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="captionStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionStrong__m4c9owt style_undefined_compound_0__m4c9ow1a"
    >
      captionStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="captionStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionStronger__m4c9owu style_undefined_compound_0__m4c9ow1a"
    >
      captionStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="code" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
    >
      code
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="codeSmall" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_codeSmall__m4c9oww style_undefined_compound_0__m4c9ow1a"
    >
      codeSmall
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="codeSmallStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_codeSmallStrong__m4c9owx style_undefined_compound_0__m4c9ow1a"
    >
      codeSmallStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="codeSmallStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_codeSmallStronger__m4c9owy style_undefined_compound_0__m4c9ow1a"
    >
      codeSmallStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="codeStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_codeStrong__m4c9owz style_undefined_compound_0__m4c9ow1a"
    >
      codeStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="codeStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_codeStronger__m4c9ow10 style_undefined_compound_0__m4c9ow1a"
    >
      codeStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="heading" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_heading__m4c9ow11 style_undefined_compound_0__m4c9ow1a"
    >
      heading
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingLarge__m4c9ow12 style_undefined_compound_0__m4c9ow1a"
    >
      headingLarge
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingLargeStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingLargeStrong__m4c9ow13 style_undefined_compound_0__m4c9ow1a"
    >
      headingLargeStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingLargeStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingLargeStronger__m4c9ow14 style_undefined_compound_0__m4c9ow1a"
    >
      headingLargeStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmall__m4c9ow15 style_undefined_compound_0__m4c9ow1a"
    >
      headingSmall
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingSmallStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmallStrong__m4c9ow16 style_undefined_compound_0__m4c9ow1a"
    >
      headingSmallStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingSmallStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmallStronger__m4c9ow17 style_undefined_compound_0__m4c9ow1a"
    >
      headingSmallStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingStrong" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingStrong__m4c9ow18 style_undefined_compound_0__m4c9ow1a"
    >
      headingStrong
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with type="headingStronger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingStronger__m4c9ow19 style_undefined_compound_0__m4c9ow1a"
    >
      headingStronger
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > renders correctly with whiteSpace 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj"
    >
      Lorem Ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > with italic 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_italic_true__m4c9ow2 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
    >
      Lorem Ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > with monochrome 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_black__m4c9ow8 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_68__m4c9ow36"
    >
      Lorem Ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > with multiple nested children renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
    >
      Lorem
      <span>
        Ipsum
      </span>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_heading__m4c9ow11 style_undefined_compound_0__m4c9ow1a"
      >
        <span>
          Dolor
        </span>
      </span>
      Sit
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_danger__m4c9ow9 style_variant_body__m4c9owj style_undefined_compound_2__m4c9ow1c style_undefined_compound_50__m4c9ow2o"
    >
      Lorem Ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`text > with underline 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_underline_true__m4c9owi style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
    >
      Lorem Ipsum
    </div>
  </div>
</DocumentFragment>
`;
